stderr
JudgeMan.java:19: error: unreachable statement
        if (Arrays.stream(intArray).allMatch(i -> intArray[i] == (intArray[i] + 1))){
        ^
1 error
